[package]
name = "vmlp-exp"
version = "0.1.0"
edition = "2021"

[dependencies]
ndarray = { version = "0.15", features = ["serde"] }
rand = "0.8"
mnist = "0.5"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
clap = { version = "4.4", features = ["derive"] }
priority-queue = "1.3"
rayon = "1.8"
linfa = { version = "0.7.0", features = ["serde"] }
linfa-clustering = { version = "0.7.0", features = ["serde"] }
approx = "0.5.1"
rand_distr = "0.4.3"
plotters = "0.3.7"
ndarray-stats = "0.6.0"
ordered-float = "4.6.0"
